tests/res/compile_errors/assign_undeclared.say
undeclared = 5; // error: Cannot assign to undefined variable 'undeclared'
